Typos and a broken link.

--- a/_posts/2020-12-24-simulate1.md
+++ b/_posts/2020-12-24-simulate1.md
@@ -11,7 +11,8 @@ There is an interplay between psychophysics, psychometrics, and attitude surveys
 
 Something that has been always bugging me is that in the ["old"](https://journals.sagepub.com/doi/10.1177/0956797613504966) statistics domain, some great people had done the background work, be it in the 1930's or 1960's, and provided us with the recipes, and accompanying _tables_ [for instance](https://www.itl.nist.gov/div898/handbook/eda/section3/eda3674.htm), to make sense of our own data, in our own research applications.
 
-	[And it is well known to what kind of woes this has lead](https://www.apa.org/science/leadership/bsa/statistical)
+[And it is well known to what kind of woes this has lead](https://www.apa.org/science/leadership/bsa/statistical)
+
 It is no secret that any modern computer's power renders this approach obsolete. [Revelle](https://www.researchgate.net/publication/326136417_Reliability_from_alpha_to_omega_a_tutorial) makes this point quite clear for assessing reliability.
 
 The long and short of this idea is that there is no need for benchmarks and shortcuts of the kind, because we have computers.
@@ -38,4 +39,4 @@ So I have been thinking a lot about this, and I decided to delve into it. I figu
 
 Ideally, when I do the analysis of the final study of my PhD, I will be in the position to say
 
-	If the data I collected are drawn from a population with _this_ structure, estimating parameters a, b, c, ..., is _that_ accurate, with a sample of this size.
+*If the data I collected are drawn from a population with _this_ structure, estimating parameters a, b, c, ..., is _that_ accurate, with a sample of this size.*
