--- a/_posts/2020-12-24-simulate2.md
+++ b/_posts/2020-12-24-simulate2.md
@@ -3,7 +3,7 @@ layout: post
 title: Beyond Simulating Item Structure
 ---
 
-This extends my previous post on [Simulating Likert Items]()
+This extends my previous post on [Simulating Likert Items](https://ninagial.github.io/simulate1/)
 
 These are some more far-fetched ideas, I still consider worth looking at.
 
